feat(InfiniteGrid): add isConstantSize option

--- a/test/manual/basic.html
+++ b/test/manual/basic.html
@@ -35,6 +35,10 @@
 	<button class="disableParallax">disable Parallax</button>
 	<button class="vertical">vertical</button>
 	<button class="horizontal">horizontal</button>
+	<button class="enable_equal">enable isEqualSize</button>
+	<button class="disable_equal">disable isEqualSize</button>
+	<button class="enable_constant">enable isConstantSize</button>
+	<button class="disable_constant">disable isConstantSize</button>
 </div>
 <style>
 
