--- a/index.html
+++ b/index.html
@@ -361,7 +361,10 @@
 				<h2 class="title">Getting Started</h2>
 				
 				<h3 id="browser-support">Browser support</h3>
-<p>IE 8+ (possibly 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.1+ (except 3.x)</p>
+
+<p>|Internext Explorer|Chrome | Firefox | Safari | IOS | Android|
+|—|—|—|—|—|—|
+IE 8+ (possibly 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.1+ (except 3.x)</p>
 
 <h3 id="quick-steps-to-use">Quick steps to use:</h3>
 
