--- a/index.html
+++ b/index.html
@@ -362,9 +362,28 @@
 				
 				<h3 id="browser-support">Browser support</h3>
 
-<p>|Internext Explorer|Chrome | Firefox | Safari | IOS | Android|
-|—|—|—|—|—|—|
-IE 8+ (possibly 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.1+ (except 3.x)</p>
+<table>
+  <thead>
+    <tr>
+      <th>Internext Explorer</th>
+      <th>Chrome</th>
+      <th>Firefox</th>
+      <th>Safari</th>
+      <th>IOS</th>
+      <th>Android</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>8+(possibly 9 also)</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td>7+</td>
+      <td>2.1+ (except 3.x)</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="quick-steps-to-use">Quick steps to use:</h3>
 
