--- a/index.html
+++ b/index.html
@@ -710,8 +710,8 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://user-images.githubusercontent.com/3433062/43043912-44de40c0-8dd7-11e8-8969-e824fc88af49.gif" alt="" /></td>
-      <td><img src="https://user-images.githubusercontent.com/3433062/43043913-45050ef8-8dd7-11e8-8f6f-3ddbc5abe05c.gif" alt="" /></td>
+      <td><img src="https://user-images.githubusercontent.com/3433062/43628822-5b2def70-9736-11e8-88a4-ada172eceaae.gif" alt="" /></td>
+      <td><img src="https://user-images.githubusercontent.com/3433062/43628824-5b5795be-9736-11e8-8fe0-46387595dd7a.gif" alt="" /></td>
     </tr>
   </tbody>
 </table>
@@ -789,7 +789,7 @@
   </tbody>
 </table>
 
-<h2 id="transitiondruation-default0">transitionDruation [default=0]</h2>
+<h2 id="transitionduration-default0">transitionDuration [default=0]</h2>
 <p>Indicates how many seconds a transition effect takes to complete.</p>
 
 <p align="center"><img src="https://user-images.githubusercontent.com/3433062/43044085-85d76a0e-8dda-11e8-80c2-0e42687ca3cb.gif" />
